--- a/GitDemo/Views/Home/Index.cshtml
+++ b/GitDemo/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="jumbotron">
     <h1>GIT DEMO</h1>
     <p class="lead">Hey! Pull this!</p>
+    <p>I've added an extra paragraph</p>
 </div>
