--- a/GitDemo/Views/Home/Index.cshtml
+++ b/GitDemo/Views/Home/Index.cshtml
@@ -6,5 +6,5 @@
     <h1>GIT DEMO</h1>
     <p class="lead">Hey! Pull this! Pull again with merge</p>
 
-    <p>I've added an extra paragraph</p>
+    <p>I've added an extra paragraph - commit and push</p>
 </div>
